Fix ui on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,11 @@
   box-sizing: border-box;
 }
 
+body,
+html {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   display: flex;
@@ -26,6 +31,7 @@ body {
   justify-content: center;
   color: rgba(255, 255, 255, 0.87);
   background-color: var(--gray-800);
+  overflow: hidden;
 }
 
 #app {
